Random IDE suggested edits, and some other edits